--- a/_sass/elements/_elements.scss
+++ b/_sass/elements/_elements.scss
@@ -13,7 +13,7 @@ body {
   color: $base-font-color;
   font-family: $base-font-family;
   font-size: $base-font-size;
-  -webkit-font-smoothing: antialiased;
+  // -webkit-font-smoothing: antialiased;
   font-weight: $base-font-weight;
   line-height: $base-line-height;
 }
